[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udapi"
version = "0.5.2"
description = "Python framework for processing Universal Dependencies data"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Martin Popel", email = "popel@ufal.mff.cuni.cz"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama",
    "termcolor",
]

[project.urls]
Homepage = "https://github.com/udapi/udapi-python"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
udapy = "udapi.cli:main"

[tool.setuptools]
packages = {find = {}}
include-package-data = true
