[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udapi"
version = "0.5.2"
description = "Python framework for processing Universal Dependencies data"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [
    {name = "Martin Popel", email = "popel@ufal.mff.cuni.cz"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama",
    "termcolor",
]

[project.urls]
Homepage = "https://github.com/udapi/udapi-python"

[project.optional-dependencies]
test = ["pytest"]
udpipe = ["ufal.udpipe"]

[project.scripts]
udapy = "udapi.cli:main"

[tool.setuptools]
packages = {find = {}}
include-package-data = true
