[metadata]
name = udapi
version = 0.2.3
author = Martin Popel
author_email = popel@ufal.mff.cuni.cz
description = Python framework for processing Universal Dependencies data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/udapi/udapi-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
scripts =
    bin/udapy
install_requires =
    colorama
    termcolor

[options.extras_require]
test =
    pytest


