[metadata]
name = udapi
version = 0.5.1
author = Martin Popel
author_email = popel@ufal.mff.cuni.cz
description = Python framework for processing Universal Dependencies data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/udapi/udapi-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    colorama
    termcolor

[options.entry_points]
console_scripts =
    udapy = udapi:cli.main

[options.extras_require]
test =
    pytest
